@@ -24,7 +24,7 @@
 
         <junit.version>5.3.1</junit.version>
         <mockito.version>2.21.0</mockito.version>
-        <surefire.version>2.22.0</surefire.version>
+        <surefire.version>2.22.1</surefire.version>
 
     </properties>
 
@@ -137,6 +137,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
+                <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
